--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     </main>
     <script src="sketch.js"></script>
     <script src="bird.js"></script>
+    <script src="pipe.js"></script>
   </body>
 </html>
